# uav_model

./: CMakeLists.txt  README.md  package.xml
data/model/network/: dnn
include/: NMPC_PC.h  NMPC_PC_main.h  UAV_model.h  UAV_model_main.h
launch/: UAV_model_dnn_main.launch  UAV_model_main.launch
solver/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.hpp  nmpc_solver.c
solver/qpoases/INCLUDE/: Constants.hpp
src/: NMPC_PC.cpp  NMPC_PC_velRef.cpp  UAV_model.cpp  UAV_model_dnn_main_velRef.cpp  UAV_model_main_velRef.cpp  dnn_normalized.py
srv/: Dnn.srv
